# mac-battery-usage

./: .gitignore  BatteryUsage.py  NOTICE  README.md  application.icns  build-dmg.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: batt_usage.py  battery_usage.py  mac_battery_usage.py
src/mac_battery_usage/: __init__.py  __main__.py  application.icns  core.py  menubar.icns  menubar.py
test/: test_core.py
