[project]
name = "BatteryUsage"
version = "0.0.1"
authors = [
    {name = "Almann Goo", email = "almann.goo@gmail.com"},
]
description = "A simple script/menubar application for battery usage session information."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rumps >= 0.4"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mac_battery_usage = ["*.icns"]
